@@ -2774,7 +2774,6 @@ STR_5410    :Edit
 STR_5411    :Reload
 STR_5412    :Skip to
 STR_5413    :Load
-STR_5414    :Load{MOVE_X}{87}Six Flags Magic Mountain.SC6
 STR_5415    :Load{MOVE_X}{87}{STRING}
 STR_5416    :Load{MOVE_X}{87}No save selected
 STR_5417    :Location
