@@ -45,12 +45,8 @@ using namespace OpenRCT2;
 class TitleSequencePlayer final : public ITitleSequencePlayer
 {
 private:
-    static constexpr const char* SFMM_FILENAME = "Six Flags Magic Mountain.SC6";
-
-    IScenarioRepository& _scenarioRepository;
     GameState& _gameState;
 
-    size_t _sequenceId = 0;
     TitleSequence* _sequence = nullptr;
     int32_t _position = 0;
     int32_t _waitCounter = 0;
@@ -60,9 +56,8 @@ private:
     CoordsXY _viewCentreLocation = {};
 
 public:
-    explicit TitleSequencePlayer(IScenarioRepository& scenarioRepository, GameState& gameState)
-        : _scenarioRepository(scenarioRepository)
-        , _gameState(gameState)
+    explicit TitleSequencePlayer(GameState& gameState)
+        : _gameState(gameState)
     {
     }
 
@@ -99,7 +94,6 @@ public:
 
         Eject();
         _sequence = sequence;
-        _sequenceId = titleSequenceId;
 
         Reset();
         return true;
@@ -258,23 +252,6 @@ private:
                 // 25 ms/tick
                 _waitCounter = std::max<int32_t>(1, command->Milliseconds / (uint32_t)GAME_UPDATE_TIME_MS);
                 break;
-            case TITLE_SCRIPT_LOADMM:
-            {
-                const scenario_index_entry* entry = _scenarioRepository.GetByFilename(SFMM_FILENAME);
-                if (entry == nullptr)
-                {
-                    Console::Error::WriteLine("%s not found.", SFMM_FILENAME);
-                    return false;
-                }
-
-                const utf8* path = entry->path;
-                if (!LoadParkFromFile(path))
-                {
-                    Console::Error::WriteLine("Failed to load: \"%s\" for the title sequence.", path);
-                    return false;
-                }
-                break;
-            }
             case TITLE_SCRIPT_LOCATION:
             {
                 int32_t x = command->X * 32 + 16;
@@ -314,32 +291,6 @@ private:
                         const utf8* path = _sequence->Saves[saveIndex];
                         Console::Error::WriteLine("Failed to load: \"%s\" for the title sequence.", path);
                     }
-                    return false;
-                }
-                break;
-            }
-            case TITLE_SCRIPT_LOADRCT1:
-            {
-                source_desc sourceDesc;
-                if (!ScenarioSources::TryGetById(command->SaveIndex, &sourceDesc) || sourceDesc.index == -1)
-                {
-                    Console::Error::WriteLine("Invalid scenario id.");
-                    return false;
-                }
-
-                const utf8* path = nullptr;
-                size_t numScenarios = _scenarioRepository.GetCount();
-                for (size_t i = 0; i < numScenarios; i++)
-                {
-                    const scenario_index_entry* scenario = _scenarioRepository.GetByIndex(i);
-                    if (scenario && scenario->source_index == sourceDesc.index)
-                    {
-                        path = scenario->path;
-                        break;
-                    }
-                }
-                if (path == nullptr || !LoadParkFromFile(path))
-                {
                     return false;
                 }
                 break;
@@ -558,7 +509,7 @@ private:
     }
 };
 
-std::unique_ptr<ITitleSequencePlayer> CreateTitleSequencePlayer(IScenarioRepository& scenarioRepository, GameState& gameState)
+std::unique_ptr<ITitleSequencePlayer> CreateTitleSequencePlayer(GameState& gameState)
 {
-    return std::make_unique<TitleSequencePlayer>(scenarioRepository, gameState);
+    return std::make_unique<TitleSequencePlayer>(gameState);
 }
