@@ -2902,7 +2902,6 @@ enum
     STR_TITLE_EDITOR_ACTION_RELOAD = 5411, // unused (commented out)
     STR_TITLE_EDITOR_ACTION_SKIP_TO = 5412,
     STR_TITLE_EDITOR_ACTION_LOAD = 5413,
-    STR_TITLE_EDITOR_COMMAND_LOAD_SFMM = 5414,
     STR_TITLE_EDITOR_COMMAND_LOAD_FILE = 5415,
     STR_TITLE_EDITOR_COMMAND_LOAD_NO_SAVE = 5416,
     STR_TITLE_EDITOR_COMMAND_TYPE_LOCATION = 5417,
