@@ -62,7 +62,6 @@ enum TITLE_SCRIPT
 {
     TITLE_SCRIPT_UNDEFINED = 0xFF,
     TITLE_SCRIPT_WAIT = 0,
-    TITLE_SCRIPT_LOADMM,
     TITLE_SCRIPT_LOCATION,
     TITLE_SCRIPT_ROTATE,
     TITLE_SCRIPT_ZOOM,
@@ -73,7 +72,6 @@ enum TITLE_SCRIPT
     TITLE_SCRIPT_SPEED,
     TITLE_SCRIPT_LOOP,
     TITLE_SCRIPT_ENDLOOP,
-    TITLE_SCRIPT_LOADRCT1,
     TITLE_SCRIPT_LOADSC,
 };
 
